=Subida de imagenes

--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "alertifyjs": "^1.11.0",
+    "angular2-notifications": "^0.9.7",
+    "angular4-notify": "^1.2.0",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "jshint": "^2.9.5",
+    "ng-notify": "^0.7.1",
     "ng2-charts": "^1.6.0",
+    "ng2-notify-popup": "^0.1.25",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
